Added testing code to index.html for Pygments

--- a/index.html
+++ b/index.html
@@ -3,3 +3,11 @@ layout: default
 title: About me
 marked_menu_item: About me
 ---
+Happy fun highlighting. 
+[More details](https://github.com/mojombo/jekyll/wiki/liquid-extensions)
+
+{% highlight ruby %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
