Added some information and fixed menu position

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@ layout: default
 title: About me
 marked_menu_item: About me
 ---
+<p>
+I am passionate Computer Science student with great fascination for Machine Learning, Data Mining and Artificial Intelligence. New algorithms, theoretical results, technologies and, moreover, their possibility to improve quality of human life.
+</p>
+
+<p>
+That is why I devoted myself to study and work in this area.
+</p>
+
+<p>More to come
 {% highlight cpp %}
 /* TODO: Fill in */
 {% endhighlight %}
+</p>
