Added some info in About me

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ I am passionate Computer Science student with great fascination for Machine Lear
 That is why I devoted myself to study and work in this area.
 </p>
 
+<p>
+Currently I am doing MSc Machine Learning at University College London and looking for part-time job to supplement my studies.
+</p>
+
 <p>More to come
 {% highlight cpp %}
 /* TODO: Fill in */
